<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about" />
    <item
        android:id="@+id/menu_switch_labelnotes"
        android:title="@string/menu_switch_labelnotes"
        android:checkable="true" />
    <item
        android:id="@+id/menu_switch_labelc"
        android:title="@string/menu_switch_labelc"
        android:checkable="true" />
    <item
        android:id="@+id/menu_switch_labelintervals"
        android:title="@string/menu_switch_labelintervals"
        android:checkable="true" />
    <item
        android:id="@+id/menu_switch_rows_top_down"
        android:title="@string/menu_switch_rows_top_down"
        android:checkable="true" />
    <item
        android:id="@+id/menu_switch_circleoffifths"
        android:title="@string/menu_switch_circleoffifths"
        android:checkable="true" />
</menu> 